支持faiss构建向量索引
